--- a/Lektion12.Web/Lektion12.Web.csproj
+++ b/Lektion12.Web/Lektion12.Web.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\PagingInfo.cs" />
+    <Compile Include="ViewModels\ProductEditViewModel.cs" />
     <Compile Include="ViewModels\ProductListViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
